feat - add shared element in style 21

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
+    <!--todo when use with style 21, add shared element-->
     <style name="AppTheme" parent="AppTheme.BaseTranslucentStatus">
         <item name="android:windowContentTransitions">true</item>
         <!--<item name="android:windowAllowEnterTransitionOverlap">true</item>-->
